# e-scheduler

./: .env.example  .gitignore  Makefile  README.md  config.py  manage.py  pyproject.toml
app/auth/: views.py
app/status/: views.py
app/task/: events.py  tasks.py
models/: users.py
tests/: test_api.py  test_basics.py
utils/: ekafka.py
